kubernetes/prod/apps/network/chat-proxy/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP}
spec:
  externalName: mattermost.monosense.io
  ports:
    - name: http
      port: 8065
      protocol: TCP
      targetPort: 8065
  type: ExternalName
