kubernetes/prod/apps/network/chat-proxy/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP}
spec:
  ingressClassName: external-nginx
  rules:
    - host: &host ${HOSTNAME}
      http:
        paths:
          - backend:
              service:
                name: ${APP}
                port:
                  name: http
            path: /
            pathType: Prefix
  tls: [hosts: [*host]]
